# kafka-proxy

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  config_example.yaml
.github/workflows/: main.yml  manual.yml
r2d2_kafka/: Cargo.toml
r2d2_kafka/src/: lib.rs
src/: config.rs  main.rs
src/http/: handlers.rs  mod.rs  server.rs
src/http/api_handler/: api.rs
src/kafka/: kafka.rs
src/log/: kflog.rs  mod.rs
src/metrics/: metrics.rs
src/r2d2_kafka/: pool.rs
src/ratelimit/: Cargo.toml
src/ratelimit/src/: config.rs  lib.rs
testdata/: kafka_config.yaml  ratelimit.yaml
wal/: Cargo.toml  README.md
wal/examples/: reader.rs  writer.rs
wal/src/: lib.rs  record.rs  segment.rs
