[package]
name = "kprf"
version = "0.1.0"
authors = [
    "Aleksandr Petrukhin <a.petrukhin@city-mobil.ru>",
    "Artyom Belyankin <dev@artie.su>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
clap = "2.33.3"
yaml-rust = "0.4.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
slog-json = "2.3.0"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
prometheus = "0.12.0"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
r2d2 = "0.8.9"
r2d2_kafka = { path = "r2d2_kafka" }

[features]
default = ["std"]
std = [ "serde" ]

[workspace]
members = ["r2d2_kafka"]