[package]
name = "r2d2_kafka"
version = "0.1.0"
description = "Apache Kafka support for the r2d2 connection pool"
keywords = ["kafka", "apache-kafka", "apache", "pool", "r2d2"]
authors = ["Artyom Belyankin <dev@artie.su>"]
edition = "2018"

[dependencies]
r2d2 = "0.8.9"
rdkafka = { version = "0.25", features = ["cmake-build"] }