[package]
name = "wal"
version = "0.1.0"
authors = ["Artem Beliankin <a.belyankin@city-mobil.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
bincode = "1.3.3"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
rmp-serde = "0.15.5"
serde_json = "1.0"

[features]
default = ["std"]
std = [ "serde" ]
